--- a/src/App.css
+++ b/src/App.css
@@ -1,61 +1,56 @@
-.pagination > li > a
-{
-    color: white;
+.pagination > li > a {
+  color: white;
 }
 
 .pagination > li > a:focus,
 .pagination > li > a:hover,
 .pagination > li > span:focus,
-.pagination > li > span:hover
-{
-    color: white;
-    background-color: #A60F2D;
+.pagination > li > span:hover {
+  color: white;
+  background-color: #a60f2d;
 }
 
-.pagination > .active > a
-{
-    color: white;
-    background-color: #A60F2D !Important;
-    border: solid 1px #A60F2D !Important;
+.pagination > .active > a {
+  color: white;
+  background-color: #a60f2d !important;
+  border: solid 1px #a60f2d !important;
 }
 
-.pagination > .active > a:hover
-{
-    background-color: #A60F2D !Important;
-    border: solid 1px #A60F2D;
+.pagination > .active > a:hover {
+  background-color: #a60f2d !important;
+  border: solid 1px #a60f2d;
 }
 
 .nav-link {
-    color: white;
-    border: solid 1px #4D4D4D !Important;
+  color: white;
+  border: solid 1px #4d4d4d !important;
 }
-  
+
 .nav-link:hover {
-    color: white;
-    background-color: #4D4D4D !Important;
-    border: solid 1px #4D4D4D !Important;
+  color: white;
+  background-color: #4d4d4d !important;
+  border: solid 1px #4d4d4d !important;
 }
 
-
-.nav-tabs .nav-link.active, .nav-tabs .nav-item.show .nav-link {
-    color: white;
-    background-color: #A60F2D !Important;
-    border: solid 1px #A60F2D !Important;
+.nav-tabs .nav-link.active,
+.nav-tabs .nav-item.show .nav-link {
+  color: white;
+  background-color: #a60f2d !important;
+  border: solid 1px #a60f2d !important;
 }
 
 .nav-tabs {
-    border-bottom: #A60F2D solid;
-    cursor: pointer;
+  border-bottom: #a60f2d solid;
+  cursor: pointer;
 }
 
 a {
-    color: #A60F2D;
-    font-weight: 600;
-    text-decoration: none;
+  color: #a60f2d;
+  font-weight: 600;
+  text-decoration: none;
 }
 
-
 a:hover {
-    display: inline-block;
-    text-decoration: underline;
+  display: inline-block;
+  text-decoration: underline;
 }
